# nRFCalc

./: .gitignore  CMakeLists.txt  Makefile  Plan.md  README.rst  keypad_web.py  prj.conf
src/: calculator_core.c  calculator_core.h  display_engine.c  display_engine.h  font_data.c  font_data.h  keypad_handler.c  keypad_handler.h  main.c
src/math/: expression_evaluator.c  expression_evaluator.h
src/state/: calculator_state.c  calculator_state.h
src/ui/: calculator_ui.c  calculator_ui.h
web/: README.md  app.py
web/static/css/: calculator.css
web/static/js/: calculator.js
web/templates/: casio_fx991.html
